# bar-inv

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: .pre-commit-config.yaml  pyproject.toml
apps/api/app/: main.py
apps/api/bar_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/docker/: Dockerfile
apps/api/tests/: test_login.py  test_me.py
